# PingerBot

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: docker.yml  lint.yml
pinger/: __init__.py  __main__.py  bot.py
pinger/core/: __init__.py  config.py
pinger/handlers/: __init__.py  ping.py  router.py
