[tool.poetry]
name = "pinger"
version = "0.1.0"
description = "Telegram pinger bot"
authors = ["D0Nater <denaddressforwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
